--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+target/
+.classpath
+.project
+.settings
+.mvn
+database/
+massa/
+
+
 # Compiled class file
 *.class
 
@@ -21,3 +30,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
