Ajustes na carga dos arquivos e inclusão de endpoint para efetuar cálculo para distribuir produtos por lojas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+project.version=@version@
+
+spring.application.name=teste
+
 spring.datasource.url=jdbc:h2:file:./database/teste
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -13,3 +17,6 @@ spring.batch.initialize-schema=always
 
 com.gft.teste.input.files.location=massa/
 com.gft.teste.input.file.pattern=*.json
+
+
+server.servlet.context-path=/teste
