--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.gft</groupId>
 	<artifactId>teste</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>teste</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
