Inclusão de logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ com.gft.teste.input.file.pattern=*.json
 
 
 server.servlet.context-path=/teste
+
+logging.level.org.zalando.logbook=TRACE
+logging.level.com.gft.teste=DEBUG
