--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>logbook-spring-boot-starter</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+
 		<!--H2 Database -->
 		<dependency>
 			<groupId>com.h2database</groupId>
