Inclusão de configuração para que só sejam logados requisições ao endpoint disponibilizado pela aplicação para cálculo da distribuição, fazendo com que o acesso ao console do H2 possa ser feito sem erros.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ server.servlet.context-path=/teste
 
 logging.level.org.zalando.logbook=TRACE
 logging.level.com.gft.teste=DEBUG
+
+logbook.include=/teste/v1**
