--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.gft</groupId>
 	<artifactId>teste</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.3-SNAPSHOT</version>
 	<name>teste</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.zalando</groupId>
 			<artifactId>logbook-spring-boot-starter</artifactId>
-			<version>1.5.0</version>
+			<version>2.6.1</version>
 		</dependency>
 
 		<!--H2 Database -->
